syntax = "proto3";

package enums;

option java_multiple_files = true;
option java_package = "com.athena.api.common.enums";

enum ModificationFlag{
  New = 0;
  Modify = 1;
  Unchanged = 2;
}

enum UserStatus{
  Enabled = 0;
  Disabled = 1;
  Locked = 2;
}

enum ContainerType{
  CONTAINER_TYPE_NORMAL = 0;
  CONTAINER_TYPE_GROUP = 1;
  CONTAINER_TYPE_REUSABLE = 2;
  CONTAINER_TYPE_TRACKED_REUSABLE = 3;
}

enum CycleDurationType{
  QUANTITY_DURATION = 0;
  WORK_DURATION = 1;
  FIXED_TIME = 2;
}

enum RouteStepType{
  STEP_TYPE_STEP = 0;
  STEP_TYPE_EMBEDDED = 1;
}

enum RouteQueueType{
  QUEUE_TYPE_NORMAL = 0;
  QUEUE_TYPE_ENTRY = 1;
  QUEUE_TYPE_EXIT = 2;
}

enum RouteArcNodeType{
  ROUTE_STEP = 0;
  ROUTE_QUEUE = 1;
}

enum bomItemTrackType{
  Lot = 0;
  Single = 1;
  None = 2;
}

enum ProductConfigurationType{
  Standard = 0;
  WorkOrder = 1;
}

enum BomType{
  BomTypeStandard = 0;
  BomTypeWorkOrder = 1;
}